Fix selected page border on mobile

--- a/_sass/3-modules/_header.scss
+++ b/_sass/3-modules/_header.scss
@@ -113,6 +113,7 @@
 
   .nav__list {
     position: absolute;
+    padding: 1rem;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
